fix datepicker internationnalization

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -108,6 +108,9 @@ good = Good
 satisfactory = Satisfactory
 poor = Poor
 
+today = Today
+month = Month
+year = Year
 
 requireAdminCred = Administrator Credentials Required
 
