--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -91,6 +91,10 @@ regDateMonthLengthError=Le mois ne peut pas dépasser 2 caractères.
 student=Etudiant
 faculty=Faculté
 
+today = Aujourd'hui
+month = Mois
+year = Année
+
 //colors
 red = Rouge
 blue = Bleu
