--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -50,25 +50,27 @@ inactive = In-Active
 dateStatusUpdated = Date Status Updated:
 InsertUsers = Insert Users
 userType = User Type:
-workerIdNumericalError = Worker ID must be a numerical value.
-workerIdRangeError = Worker ID must be 9 digits in length.
-enterWorkerIdError = Please enter a worker ID
-enterFirstNameError = Please Enter a First Name.
-enterLastNameError = Please Enter a Last Name.
-enterEmailError = Please Enter an Email Address.
+
+workerIdError = Please enter a worker ID
+credentialError =
+
+firstNameError = Please Enter a First Name.
+lastNameError = Please Enter a Last Name.
+emailAddressError = Please Enter a valid Email Address.
 phoneFormatError = Please enter a valid numerical phone number(at most 15 digits) including a (0-5 digit) country code.
-phoneNumericalError = Phone Field's Must be Numerical Values.
-enterPasswordError = Please enter a password.
+phoneNumberError = Phone Field's Must be Numerical Values.
+dateOfMembershipExpiredError = Please select a membership expiration date.
+dateOfMembershipRegError = Please select a registration date.
+dateOfInitialRegError = Please select a registration date.
+
+# This is normal, do not change :)
+countryCodeError  =
+statusError =
+notesError =
+
+passwordError = Please enter a password.
 membershipExpire = Membership Expire Date:
-memExpireDateError = Please fill out all fields for the date of membership expire date.
-memExpireDateNumericalError = Date of member expiry must be a numerical value.
-memExpireDateYearLengthError = 'Year' field in date of member expiry cannot exceed 4 characters.
-memExpireMonthLengthError = 'Month' field in date of member expiry cannot exceed 2 characters.
-memExpireDayLengthError = 'Day' field in date of member expiry cannot exceed 2 characters.
-memExpireMonthRangeError = 'Month' field in date of member expiry must be between 1 and 12.
-memExpireDayRangeError = 'Day' field in date of member expiry must be between 1 - 31.
-selectRegDateError = Please select a registration date.
-selectMemExpireDateError = Please select a membership expiration date.
+
 enterUserError = Please enter a User
 userTypeError = Please enter type of user
 membershipExpireError = Please enter expire date
@@ -81,12 +83,13 @@ entityUpdatedSuccessfully = {0} data for {1}: {2} updated successfully in databa
 errorInstallingEntity = Error installing {0} data in database.
 passwordMismatchError = Incorrect password entered.
 
-VehicleMakeError = Please enter a make.
-VehicleModelNumError = Please enter a model number.
-VehicleSerialNumError = Please enter a serial number.
-VehicleColorError = Please select a color.
-VehicleLocationError = Please enter a location.
-
+makeError = Please enter a make.
+modelNumberError = Please enter a model number.
+serialNumberError = Please enter a serial number.
+colorError = Please select a color.
+locationError = Please enter a location.
+descriptionError =
+physicalConditionError =
 
 student = Student
 faculty = Faculty
