--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -15,7 +15,8 @@ checkinButton = Connexion
 checkoutButton = Déconnexion
 
 rentButton = Louer
-returnButton = Retours
+returnButton = Retour
+
 addUserButton = Ajouter un utilisateur
 addWorkerButton = Ajouter un employé
 addBikeButton = Ajouter un Vélo
@@ -35,10 +36,13 @@ user = Utilisateur
 worker = Employé
 bike = Vélo
 Find/Modify = "Chercher/Modifier"
+
 passwordMismatch = Erreur: Mot de passe invalide
 passwordMissing = Erreur: Mot de passe manquant
 userNotFound = Erreur: L'utilisateur n'existe pas
+
 workerId = Identifiant d'employé
+
 firstName = Prénom :
 lastName = Nom de Famille :
 email = Email :
@@ -53,21 +57,25 @@ inactive = Inactif
 dateStatusUpdated = Date de mise a jour du status
 InsertUsers = Ajout d'utilisateurs
 userType = Type d'utilisateur
-workerIdNumericalError = L'ID doit etre une valeur numérique.
-workerIdRangeError = L'ID doit etre compose de 9 chiffres.
-enterWorkerIdError = Merci d'entrer un identifiant d'employé.
-enterFirstNameError = Merci d'entrer un prenom.
-enterLastNameError = Merci d'entrer un nom de famille.
-enterEmailError = Merci d'entrer une adresse email.
-phoneFormatError = Merci d'entrer un numero de téléphone au format : "xxx-xxx-xxxx".
-phoneNumericalError = Le numéro de téléphone  doit etre une valeur numérique.
-enterPasswordError = Merci d'entrer un mot de passe.
-regDateError = Merci de remplir tous les champs pour la data d'enregistrement.
-regDateYearLengthError = L'année ne peut pas dépasser 4 chiffres.
-regDateDayLengthError = Le jour ne peut pas dépasser 2 chiffres.
-regDateMonthRangeError = Le mois doit etre compris entre 1 et 12.
-regDateDayRangeError = Le jour doit etre compris entre 1 et 31.
+firstNameError = Merci d'entrer un prénom.
+lastNameError = Merci d'entrer un nom de famille.
+emailAddressError = Merci d'entrer une adresse email.
+phoneNumberError = Merci d'entrer un numero de téléphone au format : "XXXXXXXXX".
+
+workerIdError = Merci d'entrer un identifiant d'employé.
+credentialError =
+
+# This is normal, do not remove (vhb) :)
+countryCodeError  =
+statusError =
+notesError =
+
+passwordError = Merci d'entrer un mot de passe.
+dateOfMembershipExpiredError = Merci de remplir la date d'expiration.
+dateOfMembershipRegError = Merci de remplir la date d'enregistrement.
+dateOfInitialRegError = Merci de remplir la date d'enregistrement.
 membershipExpire = Date d'expiration
+
 enterUserError = Merci d'entrer un utilisateur
 userTypeError = Merci d'entrer un type d'utilisateur
 membershipExpireError = Merci d'entrer une date d'expiration.
@@ -78,16 +86,7 @@ entityInsertedSuccessfully = {0} : {1} inséré avec succès dans la base de donnée
 entityUpdatedSuccessfully = {0} : {1} mis a jour avec succès dans la base de données
 errorInstallingEntity = Erreur lors de l'insertion de {0} en base de données
 passwordMismatchError = Mot de passe invalide
-memExpireDateError=Merci de remplir tous les champs pour la date d'expiration.
-memExpireDateNumericalError=La date doit etre une valeur numerique.
-memExpireDateYearLengthError=L'année ne peux pas depasser 4 caractères.
-memExpireMonthLengthError=Le mois ne peut pas dépasser 2 caractères.
-memExpireDayLengthError=Le jour ne peut pas dépasser 2 caractères.
-memExpireMonthRangeError=Le mois doit etre compris entre 1 et 12.
-memExpireDayRangeError=Le jour doit etre compris entre 1 et 31.
-regDateNumericalError=La date d'enrigistrement doit etre une valeur numérique.
-regDateMonthLengthError=Le mois ne peut pas dépasser 2 caractères.
-//invalidprimarykeyexceptions=
+
 student=Etudiant
 faculty=Faculté
 
