add validate input

--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -11,8 +11,8 @@ transChoiceSubTitle = Système de gestion de location
 AddWorkerTitle = Ajouter un nouvel employé
 greetingTemplate = Vous etes connecté comme {0},{1} ({2}). Vous avez les privilèges {3}
 enterUserIDErrorMessage = Merci d'entrer un identifiant
-checkinButton = Connexion
-checkoutButton = Déconnexion
+checkinButton = Retourner
+checkoutButton = Louer
 
 rentButton = Louer
 returnButton = Retour
@@ -28,7 +28,7 @@ VehicleModelNum = Numéro de modèle :
 VehicleSerialNum = Numéro de série :
 VehicleColor = Couleur :
 VehicleDescription = Description :
-VehicleLocation = Location :
+VehicleLocation = Position :
 VehiclePhysicalCondition = État :
 VehicleStatus = Status :
 VehicleDateStatus = Date de mise a jour du status :
@@ -60,13 +60,22 @@ userType = Type d'utilisateur
 firstNameError = Merci d'entrer un prénom.
 lastNameError = Merci d'entrer un nom de famille.
 emailAddressError = Merci d'entrer une adresse email.
+makeError = Merci d'entrer une marque.
 phoneNumberError = Merci d'entrer un numero de téléphone au format : "XXXXXXXXX".
 
+modelNumberError = Merci d'entrer un numéro de modèle.
+serialNumberError =  Merci d'entrer un numéro de série.
+colorError = Merci de selectionner une couleur.
+locationError = Merci d'entrer une Position.
+descriptionError =
+physicalConditionError =
+
+
 workerIdError = Merci d'entrer un identifiant d'employé.
-credentialError =
+countryCodeError = Merci d'entrer un code pays.
 
 # This is normal, do not remove (vhb) :)
-countryCodeError  =
+credentialError =
 statusError =
 notesError =
 
@@ -75,6 +84,19 @@ dateOfMembershipExpiredError = Merci de remplir la date d'expiration.
 dateOfMembershipRegError = Merci de remplir la date d'enregistrement.
 dateOfInitialRegError = Merci de remplir la date d'enregistrement.
 membershipExpire = Date d'expiration
+
+rentalTitle = Retourner un Vélo
+AddRentalTitle = Traiter une nouvelle connexion
+vehicleID = Identifiant de Vélo
+rentalID = Identifiant de Location
+
+dateRented = Date de Locatioin
+dateDue = Date d'échéance
+dateReturned = Date de retours
+checkoutWorkerID = Identifiant de l'employé (location)
+checkinWorkerID = Identifiant de l'employé (retours)
+renterID = Identifiant d'employé
+
 
 enterUserError = Merci d'entrer un utilisateur
 userTypeError = Merci d'entrer un type d'utilisateur
