--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -124,6 +124,8 @@ vehicleID = Vehicle ID
 renterID = Renter ID
 dateRented = Date Rented
 dateDue = Date Due
+timeDue = Time Due
+timeRented = Time Rented
 dateReturned = Date Returned
 checkoutWorkerID = Check-Out Worker ID
 checkinWorkerID = Check-In Worker ID
