--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -136,4 +136,6 @@ poor = Mauvais
 requireAdminCred = Il faut être administrateur.
 
 titleLine = Location de vélos v1.0
-back = Retours
+back = Retour
+timeDue = Heure de retours
+timeRented = Heure de location
