added clerk functionality to get the find modify action started

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -18,6 +18,10 @@ greetingTemplate = You are logged in as: {0}, {1} ({2}). You have {3} credential
 AddWorkerTitle = Add New Worker
 AddRentalTitle = Process New Rental
 
+SearchUserTitle = Search Users
+SearchWorkerTitle = Search Workers
+SearchVehicleTitle = Search Bicycles
+
 enterUserIDErrorMessage = Please enter a user ID!
 checkinButton = Return
 checkoutButton = Rent
