added clerk functionality to get the find modify action started

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -65,6 +65,7 @@ InsertUsers = Add New Users
 userType = User Type:
 
 workerIdError = Please enter a worker ID
+vehicleIdError = Please enter a vehicle ID
 credentialError =
 
 firstNameError = Please Enter a First Name.
