Added search Functionality to the table of rentals. Now when user types into search field the table automatically re sorts the rows. Also the methods to return the rental are not compromised by the changing of table row indices.

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -155,7 +155,10 @@ checkinWorkerID = Check-In Worker ID
 
 noActiveRentalsFound = No active rentals found in database.
 
-returnSuccessful = Return was processed successfully.
+rentalReturnedSuccessfully = Bicycle (ID: {0}) was returned successfully.
 returnUnSuccessful = Return was not processed successfully.
 
 BannerID = BannerID
+
+filterInstructionsLabel = Search Rentals By Vehicle ID:
+rentalNotSelectedError = Please select a rental to return.
