Added Exception handling and error message for when a user tries to rent a bike and there are no more bicycles available to rent.

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -163,4 +163,4 @@ BannerID = BannerID
 filterInstructionsLabel = Search Rentals By Vehicle ID:
 rentalNotSelectedError = Please select a rental to return.
 
-NoBikesAvailableToRentError = Sorry, all of the bicycles in our inventory have been rented out. Please try again later once a bicycle has been returned.
+NoBikesAvailableToRentError = Sorry, all of the bicycles in our inventory currently are rented out. Please try again later once a bicycle has been returned.
