--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -90,6 +90,7 @@ dateOfInitialRegError = Please select a registration date.
 countryCodeError  =
 statusError =
 notesError =
+dateStatusUpdatedError =
 
 passwordError = Please enter a password.
 membershipExpire = Membership Expire Date:
