Language pack for English is reorganized to make it easier to read and translate, checked and all screens are currently working.

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -1,35 +1,67 @@
+//titles
 titleLine = Bike Rental System v1.0
-
-userId = User Id :
-password = Password :
-
-submit = Submit
-cancel = Cancel
-done = Done
-
-login = Log In
-logout = Log Out
-
 brockportTitle = THE COLLEGE AT BROCKPORT
 fastTracksTitle = Fast TRAX Bicycle Rentals
 transChoiceSubTitle = RENTAL MANAGEMENT SYSTEM
-greetingTemplate = You are logged in as: {0}, {1} ({2}). You have {3} credentials.
+
+InsertUsers = Add New Users
+ModifyUsers = Modify A User
 
 AddWorkerTitle = Add New Worker
 ModifyWorker = Modify A Worker
-AddRentalTitle = Process New Rental
+
+AddVehicleTitle = Add New Vehicle
+ModifyVehicle = Modify A Vehicle
+
+
+AddRentalTitle = Rent A Vehicle
+rentalTitle = Return Bike
 
 SearchUserTitle = Search Users
 SearchWorkerTitle = Search Workers
 SearchVehicleTitle = Search Bicycles
 
-enterUserIDErrorMessage = Please enter a user ID!
-checkinButton = Return
-checkoutButton = Rent
+
+
+
+//loginview
+userId = User Id :
+password = Password :
+
+//mainmenu
+greetingTemplate = You are logged in as: {0}, {1} ({2}). You have {3} credentials.
 add = Add
-AddVehicleTitle = Add New Vehicle
-ModifyVehicle = Modify A Vehicle
-rentalTitle = Return Bike
+user = User
+worker = Worker
+Worker = Worker
+bike = Bike
+Find/Modify = Find/Modify
+
+//workerview
+workerId = Worker ID:
+credential = Credential:
+administrator = Administrator
+
+//userview
+userType = User Type:
+student = Student
+faculty = Faculty
+
+//workerusershared
+firstName = First Name:
+lastName = Last Name:
+email = Email:
+phone = Phone:
+dateOfInitialReg = Date Of Initial Registration:
+notes = Notes:
+status = Status:
+active = Active
+inactive = In-Active
+dateStatusUpdated = Date Status Updated:
+
+
+
+//vehicleview
 VehicleMake = Make :
 VehicleModelNum = Model Number :
 VehicleSerialNum = Serial Number :
@@ -40,32 +72,59 @@ VehiclePhysicalCondition = Physical Condition :
 VehicleStatus = Status :
 VehicleDateStatus = Date of Status Update:
 
-user = User
-worker = Worker
-Worker = Worker
-bike = Bike
-Find/Modify = Find/Modify
+//colors
+red = Red
+blue = Blue
+green = Green
+yellow = Yellow
+black = Black
+white = White
+gray = Gray
+pink = Pink
+purple = Purple
+orange = Orange
 
+mint = Mint
+good = Good
+satisfactory = Satisfactory
+poor = Poor
+
+
+//rental
+BannerID = BannerID
+rentalID = Rental ID
+vehicleID = Vehicle ID
+renterID = Renter ID
+dateRented = Date Rented
+dateDue = Date Due
+timeDue = Time Due
+timeRented = Time Rented
+dateReturned = Date Returned
+checkoutWorkerID = Check-Out Worker ID
+checkinWorkerID = Check-In Worker ID
+filterInstructionsLabel = Search Rentals By Vehicle ID:
+
+
+//navigation
+submit = Submit
+cancel = Cancel
+back = Back
+done = Done
+login = Log In
+logout = Log Out
+checkinButton = Return
+checkoutButton = Rent
+
+//successmessages
+rentalReturnedSuccessfully = Bicycle (ID: {0}) was returned successfully.
+returnUnSuccessful = Return was not processed successfully.
+
+
+//errormessages
+enterUserIDErrorMessage = Please enter a user ID!
 passwordMismatch = Error: Password mismatch
 passwordMissing = Error: Password missing
 userNotFound = Error: user does not exist
-
-workerId = Worker ID:
-firstName = First Name:
-lastName = Last Name:
-email = Email:
-phone = Phone:
-credential = Credential:
-administrator = Administrator
-dateOfInitialReg = Date Of Initial Registration:
-notes = Notes:
-status = Status:
-active = Active
-inactive = In-Active
-dateStatusUpdated = Date Status Updated:
-InsertUsers = Add New Users
-ModifyUsers = Modify A User
-userType = User Type:
 
 workerIdError = Please enter a worker ID
 vehicleIdError = Please enter a vehicle ID
@@ -85,19 +144,18 @@ phoneNumberError = Phone Field's Must be Numerical Values.
 dateOfMembershipExpiredError = Please select a membership expiration date.
 dateOfMembershipRegError = Please select a registration date.
 dateOfInitialRegError = Please select a registration date.
+dateStatusUpdatedError = Please select a date that status was updated on.
+
+passwordError = Please enter a password.
+membershipExpire = Membership Expire Date:
+enterUserError = Please enter the user's Banner ID
+userTypeError = Please enter type of user
+membershipExpireError = Please enter expire date
 
 # This is normal, do not change :)
 countryCodeError  =
 statusError =
 notesError =
-dateStatusUpdatedError =
-
-passwordError = Please enter a password.
-membershipExpire = Membership Expire Date:
-
-enterUserError = Please enter the user's Banner ID
-userTypeError = Please enter type of user
-membershipExpireError = Please enter expire date
 
 //invalidprimarykeyexceptions
 multipleEntitiesFoundError = Multiple {0}'s matching {1}: {2} found.
@@ -115,53 +173,13 @@ locationError = Please enter a location.
 descriptionError =
 physicalConditionError =
 
-student = Student
-faculty = Faculty
-
-//colors
-red = Red
-blue = Blue
-green = Green
-yellow = Yellow
-black = Black
-white = White
-gray = Gray
-pink = Pink
-purple = Purple
-orange = Orange
-
-mint = Mint
-good = Good
-satisfactory = Satisfactory
-poor = Poor
-
-today = Today
-month = Month
-year = Year
-
 requireAdminCred = You do not have the required credentials.
-
-back = Back
-
-rentalID = Rental ID
-vehicleID = Vehicle ID
-renterID = Renter ID
-dateRented = Date Rented
-dateDue = Date Due
-timeDue = Time Due
-timeRented = Time Rented
-dateReturned = Date Returned
-checkoutWorkerID = Check-Out Worker ID
-checkinWorkerID = Check-In Worker ID
-
 noActiveRentalsFound = No active rentals found in database.
-
-rentalReturnedSuccessfully = Bicycle (ID: {0}) was returned successfully.
-returnUnSuccessful = Return was not processed successfully.
-
-BannerID = BannerID
-
-filterInstructionsLabel = Search Rentals By Vehicle ID:
 rentalNotSelectedError = Please select a rental to return.
 
 NoBikesAvailableToRentError = Sorry, all of the bicycles in our inventory currently are rented out. Please try again later once a bicycle has been returned.
+
+//notsure
+today = Today
+month = Month
+year = Year
