Minor changes to english language pack, consistency changes only.
Updated worker to now be called employee as per teachers recommendations.

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -7,38 +7,38 @@ transChoiceSubTitle = RENTAL MANAGEMENT SYSTEM
 InsertUsers = Add New Users
 ModifyUsers = Modify A User
 
-AddWorkerTitle = Add New Worker
-ModifyWorker = Modify A Worker
+AddWorkerTitle = Add New Employee
+ModifyWorker = Modify An Employee
 
 AddVehicleTitle = Add New Vehicle
 ModifyVehicle = Modify A Vehicle
 
 
 AddRentalTitle = Rent A Vehicle
-rentalTitle = Return Bike
+rentalTitle = Return A Bike
 
 SearchUserTitle = Search Users
-SearchWorkerTitle = Search Workers
+SearchWorkerTitle = Search Employees
 SearchVehicleTitle = Search Bicycles
 
 
 
 
 //loginview
-userId = User Id :
+userId = Employee Id :
 password = Password :
 
 //mainmenu
 greetingTemplate = You are logged in as: {0}, {1} ({2}). You have {3} credentials.
 add = Add
 user = User
-worker = Worker
+worker = Employee
 Worker = Worker
 bike = Bike
 Find/Modify = Find/Modify
 
 //workerview
-workerId = Worker ID:
+workerId = Employee ID:
 credential = Credential:
 administrator = Administrator
 
@@ -91,7 +91,7 @@ poor = Poor
 
 
 //rental
-BannerID = BannerID
+BannerID = Banner ID
 rentalID = Rental ID
 vehicleID = Vehicle ID
 renterID = Renter ID
@@ -100,8 +100,8 @@ dateDue = Date Due
 timeDue = Time Due
 timeRented = Time Rented
 dateReturned = Date Returned
-checkoutWorkerID = Check-Out Worker ID
-checkinWorkerID = Check-In Worker ID
+checkoutWorkerID = Check-Out Employee ID
+checkinWorkerID = Check-In Employee ID
 filterInstructionsLabel = Search Rentals By Vehicle ID:
 
 
@@ -126,16 +126,16 @@ passwordMismatch = Error: Password mismatch
 passwordMissing = Error: Password missing
 userNotFound = Error: user does not exist
 
-workerIdError = Please enter a worker ID
+workerIdError = Please enter an employee ID
 vehicleIdError = Please enter a vehicle ID
 credentialError =
 
 firstNameError = Please Enter a First Name.
 lastNameError = Please Enter a Last Name.
 emailAddressError = Please Enter a valid Email Address.
-workerIdNumericalError = Worker ID must be a numerical value.
-workerIdRangeError = Worker ID must be 9 digits in length.
-enterWorkerIdError = Please enter a worker ID.
+workerIdNumericalError = Employee ID must be a numerical value.
+workerIdRangeError = Employee ID must be 9 digits in length.
+enterWorkerIdError = Please enter a Employee ID.
 enterFirstNameError = Please Enter a First Name.
 enterLastNameError = Please Enter a Last Name.
 enterEmailError = Please Enter an Email Address.
@@ -147,10 +147,10 @@ dateOfInitialRegError = Please select a registration date.
 dateStatusUpdatedError = Please select a date that status was updated on.
 
 passwordError = Please enter a password.
-membershipExpire = Membership Expire Date:
+membershipExpire = Membership Expiration Date:
 enterUserError = Please enter the user's Banner ID
 userTypeError = Please enter type of user
-membershipExpireError = Please enter expire date
+membershipExpireError = Please enter expiration date
 
 # This is normal, do not change :)
 countryCodeError  =
@@ -160,9 +160,9 @@ notesError =
 //invalidprimarykeyexceptions
 multipleEntitiesFoundError = Multiple {0}'s matching {1}: {2} found.
 entityNotFoundError = {0} not found.
-entityInsertedSuccessfully = {0} data for {1}: {2} inserted successfully in database.
-entityUpdatedSuccessfully = {0} data for {1}: {2} updated successfully in database.
-errorInstallingEntity = Error installing {0} data in database.
+entityInsertedSuccessfully = {0} data for {1}: {2}  successfully created.
+entityUpdatedSuccessfully = {0} data for {1}: {2} updated successfully.
+errorInstallingEntity = Error creating {0} data in database.
 passwordMismatchError = Incorrect password entered.
 
 makeError = Please enter a make.
@@ -173,7 +173,7 @@ locationError = Please enter a location.
 descriptionError =
 physicalConditionError =
 
-requireAdminCred = You do not have the required credentials.
+requireAdminCred = You do not have the required credentials to perform this action.
 noActiveRentalsFound = No active rentals found in database.
 rentalNotSelectedError = Please select a rental to return.
 
