fix french translations and date format in the tableview

--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -1,120 +1,71 @@
+//titles
+titleLine = Système de gestion de location
+brockportTitle = THE COLLEGE AT BROCKPORT
+fastTracksTitle = Fast TRAX Location de Vélo
+transChoiceSubTitle = Système de gestion de location
+
+InsertUsers = Ajouter un utilisateur
+ModifyUsers = Modifier un utilisateur
+
+AddWorkerTitle = Ajouter un nouvel employé
+ModifyWorker = Modifier un employé
+
+AddVehicleTitle = Ajouter un Vélo
+ModifyVehicle = Modifier un Vélo
+
+AddRentalTitle = Louer un Vélo
+rentalTitle = Retourner un Vélo
+
+SearchUserTitle = Rechercher un Utilisateur
+SearchWorkerTitle = Rechercher un Employé
+SearchVehicleTitle = Rechercher un Vélo
+
+
+// loginview
 userId = Identifiant :
 password = Mot de passe :
-submit = Soumettre
-cancel = Quitter
-login = Connexion
-logout = Déconnexion
-done = Terminer
-brockportTitle = THE COLLEGE AT BROCKPORT
-fastTracksTitle = Fast TRAX Bicycle Rentals
-transChoiceSubTitle = Système de gestion de location
-AddWorkerTitle = Ajouter un nouvel employé
+
+//mainmenu
 greetingTemplate = Vous etes connecté comme {0},{1} ({2}). Vous avez les privilèges {3}
-enterUserIDErrorMessage = Merci d'entrer un identifiant
-checkinButton = Retourner
-checkoutButton = Louer
-
-rentButton = Louer
-returnButton = Retour
-
-addUserButton = Ajouter un utilisateur
-addWorkerButton = Ajouter un employé
-addBikeButton = Ajouter un Vélo
-
 add = Ajouter
-AddVehicleTitle = Ajouter un véhicule
-VehicleMake = Marque :
-VehicleModelNum = Numéro de modèle :
-VehicleSerialNum = Numéro de série :
-VehicleColor = Couleur :
-VehicleDescription = Description :
-VehicleLocation = Position :
-VehiclePhysicalCondition = État :
-VehicleStatus = Status :
-VehicleDateStatus = Date de mise a jour du status :
 user = Utilisateur
 worker = Employé
+Worker = Employé
 bike = Vélo
-Find/Modify = "Chercher/Modifier"
+Find/Modify = Rechercher/Modifier
 
-passwordMismatch = Erreur: Mot de passe invalide
-passwordMissing = Erreur: Mot de passe manquant
-userNotFound = Erreur: L'utilisateur n'existe pas
-
+//workerview
 workerId = Identifiant d'employé
-
-firstName = Prénom :
-lastName = Nom de Famille :
-email = Email :
-phone = Téléphone
-credential =
+credential = Privilège
 administrator = Administrateur
-dateOfInitialReg = Date d'enregistrement :
-notes = Notes :
-status = Status :
+
+//userview
+userType = Type d'utilisateur:
+student = Etudiant
+faculty = Faculté
+
+//workerusershared
+firstName = Prénom:
+lastName = Nom:
+email = Email:
+phone = Téléphone:
+dateOfInitialReg = Date d'enregistrement:
+notes = Notes:
+status = Status:
 active = Actif
 inactive = Inactif
-dateStatusUpdated = Date de mise a jour du status
-InsertUsers = Ajout d'utilisateurs
-userType = Type d'utilisateur
-firstNameError = Merci d'entrer un prénom.
-lastNameError = Merci d'entrer un nom de famille.
-emailAddressError = Merci d'entrer une adresse email.
-makeError = Merci d'entrer une marque.
-phoneNumberError = Merci d'entrer un numero de téléphone au format : "XXXXXXXXX".
+dateStatusUpdated = Date de mise a jours du status
 
-modelNumberError = Merci d'entrer un numéro de modèle.
-serialNumberError =  Merci d'entrer un numéro de série.
-colorError = Merci de selectionner une couleur.
-locationError = Merci d'entrer une Position.
-descriptionError =
-physicalConditionError =
-
-
-workerIdError = Merci d'entrer un identifiant d'employé.
-countryCodeError = Merci d'entrer un code pays.
-
-# This is normal, do not remove (vhb) :)
-credentialError =
-statusError =
-notesError =
-
-passwordError = Merci d'entrer un mot de passe.
-dateOfMembershipExpiredError = Merci de remplir la date d'expiration.
-dateOfMembershipRegError = Merci de remplir la date d'enregistrement.
-dateOfInitialRegError = Merci de remplir la date d'enregistrement.
-membershipExpire = Date d'expiration
-
-rentalTitle = Retourner un Vélo
-AddRentalTitle = Traiter une nouvelle connexion
-vehicleID = Identifiant de Vélo
-rentalID = Identifiant de Location
-
-dateRented = Date de Locatioin
-dateDue = Date d'échéance
-dateReturned = Date de retours
-checkoutWorkerID = Identifiant de l'employé (location)
-checkinWorkerID = Identifiant de l'employé (retours)
-renterID = Identifiant d'employé
-
-
-enterUserError = Merci d'entrer un utilisateur
-userTypeError = Merci d'entrer un type d'utilisateur
-membershipExpireError = Merci d'entrer une date d'expiration.
-
-multipleEntitiesFoundError = Plusieurs {0} répondant a {1}: {2} trouvés.
-entityNotFoundError = {0} non trouvé
-entityInsertedSuccessfully = {0} : {1} inséré avec succès dans la base de données
-entityUpdatedSuccessfully = {0} : {1} mis a jour avec succès dans la base de données
-errorInstallingEntity = Erreur lors de l'insertion de {0} en base de données
-passwordMismatchError = Mot de passe invalide
-
-student=Etudiant
-faculty=Faculté
-
-today = Aujourd'hui
-month = Mois
-year = Année
+//vehicleview
+VehicleMake = Marque :
+VehicleModelNum = Numéro de modèle:
+VehicleSerialNum = Numéro de Série:
+VehicleColor = Couleur:
+VehicleLocation = Position:
+VehicleDescription = Description:
+VehiclePhysicalCondition = Etat:
+VehicleStatus = Status :
+VehicleDateStatus = Date de mise a jour
 
 //colors
 red = Rouge
@@ -133,9 +84,81 @@ good = Bon
 satisfactory = Satisfaisant
 poor = Mauvais
 
-requireAdminCred = Il faut être administrateur.
-
-titleLine = Location de vélos v1.0
-back = Retour
-timeDue = Heure de retours
+//rental
+BannerID = BannerID
+rentalID = Identifiant de location
+vehicleID = Identifiant de Véhicule
+renterID = Identifiant du locataire
+dateRented = Date de location
+dateDue = Date d'échéance
+timeDue = Heure d'échéance
 timeRented = Heure de location
+dateReturned = Date de retours
+checkoutWorkerID = Identifiant d'Employé de sortie
+filterInstructionsLabel = Rechercher par id de Véhicule
+
+//navigation
+submit = Valider
+cancel = Quitter
+back = Retour
+done = Terminer
+login = Connexion
+logout = Déconnexion
+checkinButton = Retourner un Vélo
+checkoutButton = Louer un Vélo
+
+
+//errormessages
+enterUserIDErrorMessage = Merci d'enter un identifiant d'utilisateur
+passwordMismatchError = Erreur: mot de passe invalide
+passwordMissing = Merci d'entrer un mot de passe
+userNotFound = Erreur: l'utilisateur n'existe pas
+
+workerIdError = L'identifiant d'employé doit etre un nombre
+vehicleIdError = Merci d'entrer un identifiant de vehicle
+phoneNumberError = Merci d'entrer un numéro de téléphone au format : "XXX-XXXXXXXXX".
+dateOfMembershipExpiredError = Merci de sélectionner une date d'expiration
+dateOfMembershipRegError = Merci de sélectionner un date d'enregistrement
+dateOfInitialRegError =  Merci de sélectionner un date d'enregistrement
+dateStatusUpdatedError =
+
+passwordError = Merci d'entrer un mot de passe
+membershipExpire = Date d'expiration:
+enterUserError = Merci d'entrer un Banner ID
+userTypeError = Merci d'entrer un type d'utilisateur
+
+# This is normal, do not change :)
+countryCodeError  =
+statusError =
+notesError =
+
+
+credentialError =
+
+firstNameError = Merci d'entrer un prénom.
+lastNameError = Merci d'entrer un nom de famille.
+emailAddressError = Merci d'entrer une adresse email valide.
+membershipExpireError = Merci d'entrer une date d'expiration
+
+multipleEntitiesFoundError = Plusieurs {0}'s repondant a {1}: {2} trouvés.
+entityNotFoundError = {0} no trouvé.
+entityUpdatedSuccessfully = {0} {1}: {2} mis a jours avec succès.
+entityInsertedSuccessfully = {0} {1}: {2} ajouté avec succès.
+errorInstallingEntity = Erreur lors de l'insertion de {0}.
+
+makeError = Merci d'entrer une marque.
+modelNumberError = Merci d'entrer un numéro de modèle.
+serialNumberError = Merci d'entrer un numéro de série.
+colorError = Merci de sélectioner une couleur
+locationError = Merci de sélectionner une position.
+descriptionError =
+physicalConditionError =
+
+requireAdminCred = Vous n'avez pas les privilèges administrateur
+noActiveRentalsFound = Pas de location en cours trouvées.
+rentalNotSelectedError = Merci de sélectionner un vélo a retourner
+
+NoBikesAvailableToRentError = Désolé toutes nos vélos sont actuelement loué, merci de revenir plus tard.
+today = Aujourd'hui
+month = Mois
+year = Year
