--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -133,18 +133,18 @@ credentialError =
 firstNameError = Please Enter a First Name.
 lastNameError = Please Enter a Last Name.
 emailAddressError = Please Enter a valid Email Address.
-workerIdNumericalError = Worker ID must be a numerical value.
-workerIdRangeError = Worker ID must be 9 digits in length.
-enterWorkerIdError = Please enter a worker ID.
-enterFirstNameError = Please Enter a First Name.
-enterLastNameError = Please Enter a Last Name.
-enterEmailError = Please Enter an Email Address.
-phoneFormatError = Please enter a valid numerical phone number(at most 15 digits) including a (0-5 digit) country code.
+#workerIdNumericalError = Worker ID must be a numerical value.
+#workerIdRangeError = Worker ID must be 9 digits in length.
+#enterWorkerIdError = Please enter a worker ID.
+#enterFirstNameError = Please Enter a First Name.
+#enterLastNameError = Please Enter a Last Name.
+#enterEmailError = Please Enter an Email Address.
+#phoneFormatError = Please enter a valid numerical phone number(at most 15 digits) including a (0-5 digit) country code.
 phoneNumberError = Phone Field's Must be Numerical Values.
 dateOfMembershipExpiredError = Please select a membership expiration date.
 dateOfMembershipRegError = Please select a registration date.
 dateOfInitialRegError = Please select a registration date.
-dateStatusUpdatedError = Please select a date that status was updated on.
+dateStatusUpdatedError =
 
 passwordError = Please enter a password.
 membershipExpire = Membership Expire Date:
