fix an error in french for the bike return

--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -156,9 +156,10 @@ physicalConditionError =
 
 requireAdminCred = Vous n'avez pas les privilèges administrateur
 noActiveRentalsFound = Pas de location en cours trouvées.
-rentalNotSelectedError = Merci de sélectionner un vélo a retourner
+rentalNotSelectedError = Merci de sélectionner un vélo a retourner.
 
-returnUnSuccessful = Le retours a échoué
+rentalReturnedSuccessfully = Le retours du Vélo: {0} a été validé.
+returnUnSuccessful = Le retours a échoué.
 
 NoBikesAvailableToRentError = Désolé toutes nos vélos sont actuelement loué, merci de revenir plus tard.
 today = Aujourd'hui
