1 change to French, on login view I copied over the french for employee ID, already checked the code to make sure this does not mess up any other views.

--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -22,7 +22,7 @@ SearchVehicleTitle = Rechercher un Vélo
 
 
 // loginview
-userId = Identifiant :
+userId = Identifiant d'employé :
 password = Mot de passe :
 
 //mainmenu
