fix some traduction of messages

--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -26,7 +26,7 @@ userId = Identifiant d'employé :
 password = Mot de passe :
 
 //mainmenu
-greetingTemplate = Vous etes connecté comme {0},{1} ({2}). Vous avez les privilèges {3}
+greetingTemplate = Vous êtes connecté comme {0},{1} ({2}). Vous avez les privilèges {3}
 add = Ajouter
 user = Utilisateur
 worker = Employé
@@ -93,7 +93,7 @@ dateRented = Date de location
 dateDue = Date d'échéance
 timeDue = Heure d'échéance
 timeRented = Heure de location
-dateReturned = Date de retours
+dateReturned = Date de retour
 checkoutWorkerID = Identifiant d'Employé de sortie
 filterInstructionsLabel = Rechercher par id de Véhicule
 
@@ -113,6 +113,9 @@ enterUserIDErrorMessage = Merci d'enter un identifiant d'utilisateur
 passwordMismatchError = Erreur: mot de passe invalide
 passwordMissing = Merci d'entrer un mot de passe
 userNotFound = Erreur: l'utilisateur n'existe pas
+
+vehicleId = Identifiant de Véhicle
+rentalId = Identifiant de location
 
 workerIdError = L'identifiant d'employé doit etre un nombre
 vehicleIdError = Merci d'entrer un identifiant de vehicle
@@ -142,9 +145,15 @@ membershipExpireError = Merci d'entrer une date d'expiration
 
 multipleEntitiesFoundError = Plusieurs {0}'s repondant a {1}: {2} trouvés.
 entityNotFoundError = {0} no trouvé.
-entityUpdatedSuccessfully = {0} {1}: {2} mis a jours avec succès.
-entityInsertedSuccessfully = {0} {1}: {2} ajouté avec succès.
+entityUpdatedSuccessfully = {0} {1} {2} mis a jours avec succès.
+entityInsertedSuccessfully = {0} {1} {2} ajouté avec succès.
 errorInstallingEntity = Erreur lors de l'insertion de {0}.
+
+# tables
+User = Utilisateur
+Rental = Location
+Vehicle = Vélo
+
 
 makeError = Merci d'entrer une marque.
 modelNumberError = Merci d'entrer un numéro de modèle.
@@ -158,8 +167,8 @@ requireAdminCred = Vous n'avez pas les privilèges administrateur
 noActiveRentalsFound = Pas de location en cours trouvées.
 rentalNotSelectedError = Merci de sélectionner un vélo a retourner.
 
-rentalReturnedSuccessfully = Le retours du Vélo: {0} a été validé.
-returnUnSuccessful = Le retours a échoué.
+rentalReturnedSuccessfully = Le retour du Vélo: {0} a été validé.
+returnUnSuccessful = Le retour a échoué.
 
 NoBikesAvailableToRentError = Désolé toutes nos vélos sont actuelement loué, merci de revenir plus tard.
 today = Aujourd'hui
