Combobox populate needs to be fixed!
Updates
1. Update (all cases) were not working, now fixed.
-was using a weird series of strings to handle the update, I left the code but commented it out.
-added a  new methods to get each persistable objects idvalue
2. Improved language of success messages. (Victor please check the French ones)
3. Formated all text in english and french to use the same spacing convention
4. Changed vehicle location from a textbox to combobox

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -38,26 +38,26 @@ bike = Bike
 Find/Modify = Find/Modify
 
 //workerview
-workerId = Employee ID:
-credential = Credential:
+workerId = Employee ID :
+credential = Credential :
 administrator = Administrator
 
 //userview
-userType = User Type:
+userType = User Type :
 student = Student
 faculty = Faculty
 
 //workerusershared
-firstName = First Name:
-lastName = Last Name:
-email = Email:
-phone = Phone:
-dateOfInitialReg = Date Of Initial Registration:
-notes = Notes:
-status = Status:
+firstName = First Name :
+lastName = Last Name :
+email = Email :
+phone = Phone :
+dateOfInitialReg = Date Of Initial Registration :
+notes = Notes :
+status = Status :
 active = Active
-inactive = In-Active
-dateStatusUpdated = Date Status Updated:
+inactive = Inactive
+dateStatusUpdated = Date Status Updated :
 
 
 
@@ -89,20 +89,27 @@ good = Good
 satisfactory = Satisfactory
 poor = Poor
 
+//locations
+location1 = Seymour College Union
+location2 = Welcome Center
+location3 = McFarlane
+location4 = Mortimer
+location5 = Benedict
+
 
 //rental
-BannerID = Banner ID
-rentalID = Rental ID
-vehicleID = Vehicle ID
-renterID = Renter ID
-dateRented = Date Rented
-dateDue = Date Due
-timeDue = Time Due
-timeRented = Time Rented
-dateReturned = Date Returned
-checkoutWorkerID = Check-Out Employee ID
-checkinWorkerID = Check-In Employee ID
-filterInstructionsLabel = Search Rentals By Vehicle ID:
+BannerID = Banner ID :
+rentalID = Rental ID :
+vehicleID = Vehicle ID :
+renterID = Renter ID :
+dateRented = Date Rented :
+dateDue = Date Due :
+timeDue = Time Due :
+timeRented = Time Rented :
+dateReturned = Date Returned :
+checkoutWorkerID = Check-Out Employee ID :
+checkinWorkerID = Check-In Employee ID :
+filterInstructionsLabel = Search Rentals By Vehicle ID :
 
 
 //navigation
@@ -135,12 +142,12 @@ lastNameError = Please Enter a Last Name.
 emailAddressError = Please Enter a valid Email Address.
 workerIdNumericalError = Employee ID must be a numerical value.
 workerIdRangeError = Employee ID must be 9 digits in length.
-enterWorkerIdError = Please enter a Employee ID.
+enterWorkerIdError = Please enter an Employee ID.
 enterFirstNameError = Please Enter a First Name.
 enterLastNameError = Please Enter a Last Name.
 enterEmailError = Please Enter an Email Address.
 phoneFormatError = Please enter a valid numerical phone number(at most 15 digits) including a (0-5 digit) country code.
-phoneNumberError = Phone Field's Must be Numerical Values.
+phoneNumberError = Please enter a valid numerical phone number(at most 15 digits) including a (0-5 digit) country code.
 dateOfMembershipExpiredError = Please select a membership expiration date.
 dateOfMembershipRegError = Please select a registration date.
 dateOfInitialRegError = Please select a registration date.
@@ -149,7 +156,7 @@ dateStatusUpdatedError =
 passwordError = Please enter a password.
 membershipExpire = Membership Expiration Date:
 enterUserError = Please enter the user's Banner ID
-userTypeError = Please enter type of user
+userTypeError = Please select type of user
 membershipExpireError = Please enter expiration date
 
 # This is normal, do not change :)
@@ -160,8 +167,8 @@ notesError =
 //invalidprimarykeyexceptions
 multipleEntitiesFoundError = Multiple {0}'s matching {1}: {2} found.
 entityNotFoundError = {0} not found.
-entityInsertedSuccessfully = {0} data for {1}: {2}  successfully created.
-entityUpdatedSuccessfully = {0} data for {1}: {2} updated successfully.
+entityInsertedSuccessfully = Successfully added data for {0} {1}
+entityUpdatedSuccessfully = Successfully updated data for {0} {1}
 errorInstallingEntity = Error creating {0} data in database.
 passwordMismatchError = Incorrect password entered.
 
