--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -35,35 +35,35 @@ bike = Vélo
 Find/Modify = Rechercher/Modifier
 
 //workerview
-workerId = Identifiant d'employé
-credential = Privilège
+workerId = Identifiant d'employé :
+credential = Privilège :
 administrator = Administrateur
 
 //userview
-userType = Type d'utilisateur:
+userType = Type d'utilisateur :
 student = Etudiant
 faculty = Faculté
 
 //workerusershared
-firstName = Prénom:
-lastName = Nom:
-email = Email:
-phone = Téléphone:
-dateOfInitialReg = Date d'enregistrement:
-notes = Notes:
-status = Status:
+firstName = Prénom :
+lastName = Nom :
+email = Email :
+phone = Téléphone :
+dateOfInitialReg = Date d'enregistrement :
+notes = Notes :
+status = Status :
 active = Actif
 inactive = Inactif
-dateStatusUpdated = Date de mise a jours du status
+dateStatusUpdated = Date de mise a jours du status :
 
 //vehicleview
 VehicleMake = Marque :
-VehicleModelNum = Numéro de modèle:
-VehicleSerialNum = Numéro de Série:
-VehicleColor = Couleur:
-VehicleLocation = Position:
-VehicleDescription = Description:
-VehiclePhysicalCondition = Etat:
+VehicleModelNum = Numéro de modèle :
+VehicleSerialNum = Numéro de Série :
+VehicleColor = Couleur :
+VehicleLocation = Position :
+VehicleDescription = Description :
+VehiclePhysicalCondition = Etat :
 VehicleStatus = Status :
 VehicleDateStatus = Date de mise a jour
 
@@ -83,6 +83,14 @@ mint = Neuf
 good = Bon
 satisfactory = Satisfaisant
 poor = Mauvais
+
+//locations
+location1 = Seymour College Union
+location2 = Centre D'accueil
+location3 = McFarlane
+location4 = Mortimer
+location5 = Benedict
+
 
 //rental
 BannerID = BannerID
